# synaptic

./: .gitignore  AGENTS.md  README.md  RELEASING.md  biome.json  package.json  readme.txt  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: bump-version.ts  install.sh
src/: app.css  app.d.ts  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  ghost.rs  indexer.rs  main.rs  pty.rs  semantic.rs  settings.rs  sync.rs  watcher.rs
src/lib/: api.ts  markdown.ts  store.svelte.ts  types.ts  updater.svelte.ts  utils.ts
src/lib/__tests__/: markdown.test.ts  setup.ts  store.test.ts  utils.test.ts
src/lib/__tests__/components/: input.test.svelte.ts
src/lib/components/: DependencyCheck.svelte  Editor.svelte  FindOrCreate.svelte  GenerateNote.svelte  GhostLinks.svelte  Graph.svelte  KeybindHelp.svelte  Landing.svelte  NewNote.svelte  NvimTerminal.svelte  RenameNote.svelte  ScratchFinder.svelte  SemanticSearch.svelte  Settings.svelte  Titlebar.svelte  UpdatePrompt.svelte
src/lib/components/ui/: button.svelte  command.svelte  dialog.svelte  index.ts  input.svelte  scroll-area.svelte  separator.svelte  tabs.svelte
src/routes/: +layout.svelte  +page.svelte
