[package]
name = "synaptic"
version = "0.6.9"
description = "A minimal OLED-dark note-taking app"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.0", features = [] }
tauri-plugin-dialog = "2.2.1"
tauri-plugin-fs = "2.2.1"
tauri-plugin-shell = "2.2.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
walkdir = "2.5"

notify = "7.0"
which = "6.0"
portable-pty = "0.9"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.43", features = ["rt-multi-thread"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
